--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Colégio Nicanor Bueno Mendes</title>
+<title>mercado LK</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -22,9 +22,6 @@
 <h1>Colégio Nicanor Bueno Mendes</h1>
 
 <p>
-O Colégio Nicanor Bueno Mendes oferece um Ensino Médio atualizado com 2
-opções de itinerários formativos. Tem por objetivo a formação integral do aluno, voltada para
-a construção de seu projeto de vida e para a formação dos aspectos físicos, cognitivos,
-socioemocionais e preparação para o mundo do trabalho, contribuindo para sua inserção na
-sociedade.
+O mercado LK oferece um atendimento brilhante,produtos de otima qualidade e grandes 
+  promoçoes para nossos clientes.venha conhecer nosso estabelicimento.
 </p>
