--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div id="conteudo"> <!--Inicio do conteudo-->
 
-<h1>Colégio Nicanor Bueno Mendes</h1>
+<h1>mercado LK </h1>
 
 <p>
 O mercado LK oferece um atendimento brilhante,produtos de otima qualidade e grandes 
